--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>Aashiqui 2</header>
+	<nav>
+		<a id="nav-actor" href="#actor">Actors</a>
+		<a id="nav-quote" href="#quote">Actors</a>
+	</nav>
+	<summary>Rahul is a singer, who loses his career due to his drinking habits. He meets Arohi in a bar in Goa, where she works to earn a living. Impressed by her singing, he promises her to take her to Mumbai and make her a star, where they fall in love with each other. Aashiqui 2 is a musical love story of these lovers who goes through love and hate, fame and failure in their lives. However will they stay together accepting their success, or will they breakup due to their ego?</summary>
+	<section id="actor">Aditya Roy KapoorShraddha KapoorShaad Randhawa</section>
+	<section id="quote">
+		Rahul: Suno...
+Arohi Stirke: Kya?
+Rahul: Kuch nai... bas yun hi.
+	</section>
+	<aside>
+		IMDb RATING: 7.0
+		Release date: April 26, 2013 (India)
+	</aside>
+	<footer>Produced by: Vishesh Films</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
